force-app/main/default/objects/KimbleOne__SupplierInvoiceStatementLine__c/KimbleOne__SupplierInvoiceStatementLine__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Supplier Invoice Statement Line</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Supplier Invoice Statement Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Supplier Invoice Statement Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>