force-app/main/default/objects/KimbleOne__SupplierInvoiceStatementLine__c/fields/KimbleOne__InterfaceRun__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InterfaceRun__c</fullName>
    <label>Interface Run</label>
    <referenceTo>KimbleOne__InterfaceRun__c</referenceTo>
    <relationshipLabel>Supplier Invoice Statement Lines</relationshipLabel>
    <relationshipName>SupplierInvoiceStatementLines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>