force-app/main/default/objects/KimbleOne__SupplierInvoiceStatementLine__c/fields/KimbleOne__InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoiceDate__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>