force-app/main/default/objects/KimbleOne__SupplierInvoiceStatementLine__c/fields/KimbleOne__Status__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Status__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Status</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>KimbleOne__ReferenceData__c.KimbleOne__Domain__c</field>
            <operation>equals</operation>
            <value>InterfaceRunLineStatus</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>KimbleOne__ReferenceData__c</referenceTo>
    <relationshipLabel>Supplier Invoice Statement Liness</relationshipLabel>
    <relationshipName>SupplierInvoiceStatementLines</relationshipName>
    <type>Lookup</type>
</CustomField>