force-app/main/default/objects/KimbleOne__SupplierInvoiceStatementLine__c/fields/KimbleOne__SupplierPurchaseOrder__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__SupplierPurchaseOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>KimbleOne__SupplierPurchaseOrder__c</referenceTo>
    <relationshipLabel>Supplier Invoice Statement Lines</relationshipLabel>
    <relationshipName>SupplierInvoiceStatementLines</relationshipName>
    <type>Lookup</type>
</CustomField>